# CustomTkinterValidator

./: .gitignore  LICENSE  README.md  pyproject.toml
customtkinter_validator/: __init__.py  __main__.py
customtkinter_validator/analyzer/: __init__.py  accessibility_checker.py  consistency_checker.py  contrast_checker.py  layout_metrics.py  tree_extractor.py  ux_analyzer.py
customtkinter_validator/core/: __init__.py  config.py  runner.py
customtkinter_validator/reporting/: __init__.py  json_serializer.py  rule_engine.py
customtkinter_validator/test_harness/: __init__.py  auto_explorer.py  event_simulator.py  injector.py  widget_registry.py
customtkinter_validator/widgets/: __init__.py  base.py
docs/: ai-integration.md  api-reference.md  architecture.md  configuration.md  examples.md  extending.md  getting-started.md  index.md
examples/: sample_app.py  sample_report.json  sample_test.py
