[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customtkinter-validator"
version = "2.1.0"
description = "AI-native GUI testing and UX validation framework for CustomTkinter applications"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CustomTkinter Validator Team"}
]
keywords = ["customtkinter", "gui", "testing", "validation", "accessibility", "ux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.scripts]
ctk-validator = "customtkinter_validator.__main__:main"

[tool.setuptools.packages.find]
include = ["customtkinter_validator*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100
